Fix: Fixed nav bar and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,9 @@
 
 *,::before,::after{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* border: 2px solid red; */
     
 }
 
@@ -131,7 +134,7 @@ img{
 
 .bd-grid{
     max-width: auto;
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 100%;
     column-gap: 2rem;
     width: calc(100% - 2rem);
@@ -140,7 +143,7 @@ img{
 }
 .l-header{
     width: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
